[tool.poetry]
name = "controle-de-gastos"
version = "0.1.0"
description = ""
authors = ["Everton Fontes <efs.fontes@gmail.com>"]
readme = "README.md"
packages = [{include = "controle_de_gastos"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.92.0"
rich = "^13.3.1"
uvicorn = "^0.20.0"
tortoise-orm = "^0.19.3"
python-dotenv = "^0.21.1"
python-multipart = "^0.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
